--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello Worldgit</h1>
+    <p>the power of love is a curious thing</p>
+    <P>making one man weep and another one sing</P>
 </body>
 </html>
