--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello Worldgit</h1>
+    <h1>Hello World!</h1>
     <p>the power of love is a curious thing</p>
     <P>making one man weep and another one sing</P>
 </body>
